# zaivern-code

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  install.ps1  install.sh
.gemini/: rules.md
.github/workflows/: release.yml
assets/plugins/agent-compare/: compare.sh  lib.sh  pick.sh  plugin.toml
assets/plugins/diff-review/: clear.sh  comment.sh  pending.sh  plugin.toml  review.sh  send.sh
assets/plugins/element-capture/: plugin.toml
assets/plugins/element-capture/scripts/: build-prompt.py  capture-common.sh  common.sh  find-browser.applescript  paste.sh  pick.sh  picker.js  poll.js  region.sh
assets/plugins/english-mode/: plugin.toml
assets/plugins/english-mode/lang/: 10-common.toml  20-app.toml  30-cockpit.toml  (+4 more)
assets/plugins/quick-actions/: plugin.toml
assets/plugins/remote-host/: agent.sh  exec.sh  plugin.toml  pull.sh  push.sh  remote.sh  worktree.sh
assets/plugins/tasks/: plugin.toml
assets/plugins/usage-meter/: plugin.toml
assets/plugins/worktrees/: create.sh  list.sh  merge.sh  parallel.sh  plugin.toml  remove.sh
docs/: PLUGIN_SPEC.md  plugins.md
src/: agent_input.rs  agent_picker.rs  agents.rs  app.rs  cli.rs  commander.rs  config.rs  coordinator.rs  desktop.rs  diagnostician.rs  diff.rs  editor.rs  editor_ops.rs  file_search.rs  file_tree.rs  fuzzy.rs  git.rs  git_panel.rs  github.rs  highlight.rs  html.rs  i18n.rs  ide.rs  jsonc.rs  kanban.rs  keybinds.rs  lockx.rs  lsp.rs  main.rs  markdown.rs  menu_bar.rs  notify.rs  orchestration.rs  palette.rs  panels.rs  pet.rs  pet_bubble.rs  pet_variants.rs  plugins.rs  recent.rs  (+10 more)
(+16 files in other folders)
