[package]
name = "zaivern-code"
version = "0.1.0"
edition = "2021"
description = "Zaivern Code — Rust-native AI cockpit editor (Zed × Cmux × AGI Cockpit)"
license = "Apache-2.0"

[dependencies]
eframe = "0.29"
egui = "0.29"
syntect = "5.2"
portable-pty = "0.8"
vt100 = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
qrcode = { version = "0.14", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
